# aws-pricer

./: AGENTS.md  README.md  pyproject.toml  requirements-dev.txt
src/aws_pricer/: __init__.py  cli.py  pricing.py  types.py
tests/: __init__.py  test_pricing.py
tests/fixtures/: pricing.py
