[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-pricer"
version = "0.1.0"
description = "Fetch AWS Compute on-demand and Savings Plans pricing."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "AWS Pricer Maintainers" }
]
dependencies = [
  "boto3>=1.34,<2.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "build>=1.0,<2.0",
  "invoke>=2.0,<3.0",
  "mypy>=1.8,<2.0",
  "pytest>=7.4,<9.0",
  "pytest-cov>=4.1,<6.0",
  "ruff>=0.2,<1.0",
  "twine>=4.0,<5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["aws_pricer*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "A", "C4", "RUF"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = [
  "tests",
]

